:books: docs: Add Documentation for deleteOpening
